Closed
Bug 839456
Opened 12 years ago
Closed 12 years ago
do some in-process crash annotation with plugin versions on Android
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(firefox20 fixed, firefox21 fixed)
RESOLVED
FIXED
mozilla21
People
(Reporter: blassey, Assigned: snorp)
References
Details
Attachments
(1 file, 3 obsolete files)
2.20 KB,
patch
|
snorp
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
This will help us figure out if crashes we're seeing are from antiquated versions of flash and blocking them might be a useful solution.
Reporter | ||
Comment 1•12 years ago
|
||
If we can't get the version from the plugin library, we can get it from PackageInfo:
http://developer.android.com/reference/android/content/pm/PackageInfo.html#versionCode
![]() |
||
Comment 2•12 years ago
|
||
As I recently discussed with bsmedberg, we apparently have added something like this for plugin processes, but unfortunately we don't run plugins on Android out-of-process and therefore don't get that. Benjamin, can we get something in there despite that?
Comment 3•12 years ago
|
||
Of course, just annotate the Flash version when you first load it using nsICrashReporter.annotateCrashReport("FlashVersion", versionstring).
Assignee | ||
Comment 4•12 years ago
|
||
Assignee | ||
Updated•12 years ago
|
Attachment #711975 -
Flags: review?(benjamin)
Assignee | ||
Comment 5•12 years ago
|
||
Assignee | ||
Updated•12 years ago
|
Attachment #711975 -
Attachment is obsolete: true
Attachment #711975 -
Flags: review?(benjamin)
Assignee | ||
Updated•12 years ago
|
Attachment #711977 -
Flags: review?(benjamin)
Assignee | ||
Comment 6•12 years ago
|
||
Can't build with crash reporter for Fennec on Mac, so untested. Try run here: https://tbpl.mozilla.org/?tree=Try&rev=7cc5fe856f26
Assignee | ||
Comment 7•12 years ago
|
||
(In reply to Benjamin Smedberg [:bsmedberg] from comment #3)
> Of course, just annotate the Flash version when you first load it using
> nsICrashReporter.annotateCrashReport("FlashVersion", versionstring).
Is it ok to do this more than once? The patch above does it on every instance.
Assignee | ||
Comment 8•12 years ago
|
||
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #7)
> (In reply to Benjamin Smedberg [:bsmedberg] from comment #3)
> > Of course, just annotate the Flash version when you first load it using
> > nsICrashReporter.annotateCrashReport("FlashVersion", versionstring).
>
> Is it ok to do this more than once? The patch above does it on every
> instance.
It looks like a hashtable, so guess it's fine.
Comment 9•12 years ago
|
||
Comment on attachment 711977 [details] [diff] [review]
Annotate crash reports with Flash version on Android
Assuming you've verified that pluginTag->mVersion contains useful data, sure.
Attachment #711977 -
Flags: review?(benjamin) → review+
Assignee | ||
Comment 10•12 years ago
|
||
Assignee | ||
Updated•12 years ago
|
Attachment #711977 -
Attachment is obsolete: true
Assignee | ||
Comment 11•12 years ago
|
||
Comment on attachment 712482 [details] [diff] [review]
Annotate crash reports with Flash version on Android
Wrapped "FlashVersion" in NS_LITERAL_CSTRING so it should build/work now. Carrying forward r+ from prior patch.
Try run here: https://tbpl.mozilla.org/?tree=Try&rev=ba45f4126a18
Attachment #712482 -
Flags: review+
Updated•12 years ago
|
Priority: -- → P2
Assignee | ||
Comment 12•12 years ago
|
||
Assignee | ||
Updated•12 years ago
|
Attachment #712482 -
Attachment is obsolete: true
Assignee | ||
Comment 13•12 years ago
|
||
Comment on attachment 713056 [details] [diff] [review]
Annotate crash reports with Flash version on Android
Third time is a charm. Try run here: https://tbpl.mozilla.org/?tree=Try&rev=9074ad2fe504
Attachment #713056 -
Flags: review+
Assignee | ||
Comment 14•12 years ago
|
||
Assignee | ||
Comment 15•12 years ago
|
||
Comment on attachment 713056 [details] [diff] [review]
Annotate crash reports with Flash version on Android
[Approval Request Comment]
I want to make sure this is working on m-c first, but we should merge to Aurora and Beta pronto.
Attachment #713056 -
Flags: approval-mozilla-beta?
Attachment #713056 -
Flags: approval-mozilla-aurora?
Comment 16•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
Comment 17•12 years ago
|
||
Comment on attachment 713056 [details] [diff] [review]
Annotate crash reports with Flash version on Android
As much as we'd like this on Beta we're now past the point of taking any non-critical landings on that branch. Approving for Aurora only.
Attachment #713056 -
Flags: approval-mozilla-beta?
Attachment #713056 -
Flags: approval-mozilla-beta-
Attachment #713056 -
Flags: approval-mozilla-aurora?
Attachment #713056 -
Flags: approval-mozilla-aurora+
Comment 18•12 years ago
|
||
status-firefox20:
--- → fixed
status-firefox21:
--- → fixed
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•