Bug 839456 - Annotate crash reports with Flash version on Android r=bsmedberg