dom/plugins/base/nsPluginHost.cpp
@@ -132,6 +132,10 @@
 #define LOG(args...)  __android_log_print(ANDROID_LOG_INFO, "GeckoPlugins" , ## args)
 #endif
 
+#if MOZ_CRASHREPORTER
+#include "nsExceptionHandler.h"
+#endif
+
 using namespace mozilla;
 using mozilla::TimeStamp;
 
@@ -1048,6 +1052,12 @@ nsPluginHost::TrySetUpPluginInstance(const char *aMimeType,
 
   nsPluginTag* pluginTag = FindPluginForType(aMimeType, true);
   NS_ASSERTION(pluginTag, "Must have plugin tag here!");
+
+#if defined(MOZ_WIDGET_ANDROID) && defined(MOZ_CRASHREPORTER)
+  if (pluginTag->mIsFlashPlugin) {
+    CrashReporter::AnnotateCrashReport(NS_LITERAL_CSTRING("FlashVersion"), pluginTag->mVersion);
+  }
+#endif
 
   nsRefPtr<nsNPAPIPlugin> plugin;
   GetPlugin(aMimeType, getter_AddRefs(plugin));
